# computacao-grafica

./: .gitignore  LICENSE  README.md
Atividade01/: Doxyfile  atividade1  atividade1.cpp  circle.ppm  export_image.cpp  square.ppm
Atividade02/: CMakeLists.txt  Doxyfile  README.md  atividade2
Atividade02/src/: atividade2.cpp  color.h
Atividade02/src/geometry/: mat2.h  mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
Atividade02/tests/: CMakeLists.txt
Atividade02/tests/geometry/: test_mat2.cpp  test_mat3.cpp  test_mat4.cpp  test_vec2.cpp  test_vec4.cpp
Atividade03/: CMakeLists.txt  README.md
Atividade03/src/: atividade3.cpp  obj_reader.h
Atividade03/tests/: CMakeLists.txt  test_obj_reader.cpp
Atividade04/: CMakeLists.txt  Doxyfile
Atividade04/src/: atividade4.cpp  obj_reader.h
Atividade04/src/geometry/: mat3.h
Atividade04/tests/geometry/: test_vec3.cpp
Atividade05/: CMakeLists.txt  Doxyfile  README.md
Atividade05/src/: atividade5.cpp  camera.h  color.h  rtweekend.h
Atividade05/src/geometry/: hittable.h  hittable_list.h  object.h  sphere.h  triangle.h  vec3.h
Atividade05/src/util/: interval.h
Atividade05/tests/: CMakeLists.txt
Atividade05/tests/geometry/: test_mat3.cpp
Atividade06/: CMakeLists.txt  Doxyfile  README.md
Atividade06/src/: atividade6.cpp  camera.h  rtweekend.h
Atividade06/src/geometry/: hittable.h  mat3.h  material.h  object.h  ray.h  sphere.h  triangle.h  vec3.h
Atividade06/src/util/: interval.h
ProjetoFinal/: CMakeLists.txt  Doxyfile  README.md
ProjetoFinal/src/: camera.h  circular_animation.h  projeto_final.cpp
ProjetoFinal/src/geometry/: face_data.h  hittable.h  mat3.h  mat4.h  material.h  object.h  sphere.h  triangle.h  vec3.h
ProjetoFinal/src/util/: rtweekend.h
